<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chsra.inclass4.MainActivity">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbers"
        android:id="@+id/numbers_id"
        android:textSize="20sp"
        android:layout_above="@+id/uppercase_id"
        android:layout_marginTop="5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uppercase"
        android:id="@+id/uppercase_id"
        android:textSize="20dp"
        android:layout_above="@+id/lowercase_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowercase"
        android:id="@+id/lowercase_id"
        android:textSize="20dp"
        android:layout_above="@+id/special_id"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special_id"
        android:id="@+id/special_id"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/view"
        android:layout_toEndOf="@+id/view"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gp_thread"
        android:id="@+id/gpthread"
        android:textSize="20dp"
        android:layout_below="@+id/special_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gp_asynctask"
        android:id="@+id/gpasynctask"
        android:textSize="20dp"
        android:layout_below="@+id/gpthread"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:clickable="true"
        android:entries="@array/password_length"
        android:dropDownSelector="@id/spinner"
        android:focusable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="-10dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_above="@+id/numbers_id" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_hint"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/spinner"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/passwordText"
        android:layout_below="@+id/special_id"
        android:layout_centerHorizontal="true" />
</RelativeLayout>